--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1091,6 +1091,13 @@ a:hover {
   cursor: pointer
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
 .hover\:cursor-ne-resize:hover {
   cursor: ne-resize;
 }
@@ -1185,5 +1192,15 @@ a:hover {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
