--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -710,8 +710,12 @@ video {
   width: 40px;
 }
 
-.w-\[45px\] {
-  width: 45px;
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[calc\(100\%-2rem\)\] {
+  width: calc(100% - 2rem);
 }
 
 .w-full {
@@ -720,14 +724,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[55px\] {
-  width: 55px;
-}
-
-.w-\[50px\] {
-  width: 50px;
 }
 
 .max-w-md {
@@ -928,21 +924,6 @@ video {
   padding-bottom: 2px;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -953,6 +934,14 @@ video {
 
 .pb-8 {
   padding-bottom: 2rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .text-center {
@@ -1002,9 +991,9 @@ video {
   font-weight: 700;
 }
 
-.text-\[blue\] {
+.text-\[green\] {
   --tw-text-opacity: 1;
-  color: rgb(0 0 255 / var(--tw-text-opacity));
+  color: rgb(0 128 0 / var(--tw-text-opacity));
 }
 
 .text-\[red\] {
@@ -1027,17 +1016,8 @@ video {
   color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
-.text-\[green\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 128 0 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
-}
-
-.no-underline {
-  text-decoration-line: none;
 }
 
 .opacity-0 {
@@ -1121,7 +1101,7 @@ video {
 }
 
 .shadowPlay {
-  box-shadow: 0 0 50px black !important;
+  box-shadow: 0 0 30px black !important;
 }
 
 a {
@@ -1138,16 +1118,6 @@ a:hover {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
-}
-
-.hover\:rotate-45:hover {
-  --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:rotate-\[360\]:hover {
-  --tw-rotate: 360;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:rotate-\[360deg\]:hover {
@@ -1214,8 +1184,20 @@ a:hover {
 }
 
 @media (min-width: 768px) {
+  .md\:sticky {
+    position: sticky;
+  }
+
   .md\:m-0 {
     margin: 0px;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:aspect-auto {
@@ -1234,6 +1216,10 @@ a:hover {
     width: 50%;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1244,5 +1230,9 @@ a:hover {
 
   .md\:rounded-none {
     border-radius: 0px;
+  }
+
+  .md\:pb-8 {
+    padding-bottom: 2rem;
   }
 }
