--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -932,16 +932,24 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .pb-8 {
   padding-bottom: 2rem;
 }
 
-.pb-12 {
-  padding-bottom: 3rem;
+.pb-\[100px\] {
+  padding-bottom: 100px;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
+.pb-\[80px\] {
+  padding-bottom: 80px;
 }
 
 .text-center {
@@ -1190,10 +1198,6 @@ a:hover {
 
   .md\:m-0 {
     margin: 0px;
-  }
-
-  .md\:mb-8 {
-    margin-bottom: 2rem;
   }
 
   .md\:block {
