--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -649,6 +649,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .box-content {
   box-sizing: content-box;
 }
@@ -708,10 +712,6 @@ video {
 
 .w-\[40px\] {
   width: 40px;
-}
-
-.w-\[50px\] {
-  width: 50px;
 }
 
 .w-\[calc\(100\%-2rem\)\] {
@@ -932,26 +932,6 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pb-\[100px\] {
-  padding-bottom: 100px;
-}
-
-.pb-\[80px\] {
-  padding-bottom: 80px;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1152,10 +1132,6 @@ a:hover {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-opacity-100:hover {
-  --tw-bg-opacity: 1;
-}
-
 .hover\:text-\[blue\]:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 255 / var(--tw-text-opacity));
@@ -1200,10 +1176,6 @@ a:hover {
     margin: 0px;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:aspect-auto {
     aspect-ratio: auto;
   }
@@ -1234,9 +1206,5 @@ a:hover {
 
   .md\:rounded-none {
     border-radius: 0px;
-  }
-
-  .md\:pb-8 {
-    padding-bottom: 2rem;
   }
 }
