--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -564,16 +564,12 @@ video {
   right: -0.5rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
 .left-0 {
   left: 0px;
+}
+
+.right-4 {
+  right: 1rem;
 }
 
 .top-0 {
@@ -586,6 +582,10 @@ video {
 
 .top-4 {
   top: 1rem;
+}
+
+.bottom-4 {
+  bottom: 1rem;
 }
 
 .z-10 {
@@ -604,21 +604,8 @@ video {
   z-index: 50;
 }
 
-.m-4 {
-  margin: 1rem;
-}
-
 .m-auto {
   margin: auto;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.mb-0 {
-  margin-bottom: 0px;
 }
 
 .mb-2 {
@@ -645,12 +632,12 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .box-content {
@@ -677,8 +664,8 @@ video {
   display: none;
 }
 
-.aspect-\[1\.3\] {
-  aspect-ratio: 1.3;
+.aspect-\[16\/9\] {
+  aspect-ratio: 16/9;
 }
 
 .h-auto {
@@ -702,6 +689,10 @@ video {
   max-height: 70vh;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-\[15px\] {
   width: 15px;
 }
@@ -710,12 +701,17 @@ video {
   width: 200px;
 }
 
+.w-\[30vw\] {
+  width: 30vw;
+}
+
 .w-\[40px\] {
   width: 40px;
 }
 
-.w-\[calc\(100\%-2rem\)\] {
-  width: calc(100% - 2rem);
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-full {
@@ -734,14 +730,12 @@ video {
   max-width: 36rem;
 }
 
-.rotate-\[20deg\] {
-  --tw-rotate: 20deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.max-w-2xl {
+  max-width: 42rem;
 }
 
-.scale-105 {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
+.rotate-\[20deg\] {
+  --tw-rotate: 20deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -755,10 +749,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-col-reverse {
-  flex-direction: column-reverse;
 }
 
 .items-center {
@@ -787,14 +777,6 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
-.overflow-y-scroll {
-  overflow-y: scroll;
 }
 
 .rounded-2xl {
@@ -909,11 +891,6 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-\[1px\] {
   padding-top: 1px;
   padding-bottom: 1px;
@@ -924,12 +901,21 @@ video {
   padding-bottom: 2px;
 }
 
-.pb-0 {
-  padding-bottom: 0px;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -1024,9 +1010,10 @@ video {
   opacity: 0.5;
 }
 
-.brightness-\[500\] {
-  --tw-brightness: brightness(500);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .backdrop-blur-md {
@@ -1088,8 +1075,13 @@ video {
         1px 1px 0 #000;
 }
 
-.shadowPlay {
-  box-shadow: 0 0 30px black !important;
+.playing {
+  box-shadow: 0 0 30px hsla(0, 0%, 0%, 0.4) !important;
+  width: 50vw;
+}
+
+.infoReduced {
+  max-width: 40vw !important;
 }
 
 a {
@@ -1132,6 +1124,26 @@ a:hover {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[black\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[yellow\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 0 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
 .hover\:text-\[blue\]:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 255 / var(--tw-text-opacity));
@@ -1140,6 +1152,11 @@ a:hover {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1168,32 +1185,20 @@ a:hover {
 }
 
 @media (min-width: 768px) {
-  .md\:sticky {
-    position: sticky;
+  .md\:fixed {
+    position: fixed;
   }
 
-  .md\:m-0 {
-    margin: 0px;
+  .md\:bottom-0 {
+    bottom: 0px;
   }
 
-  .md\:aspect-auto {
-    aspect-ratio: auto;
+  .md\:right-0 {
+    right: 0px;
   }
 
-  .md\:h-auto {
-    height: auto;
-  }
-
-  .md\:h-screen {
-    height: 100vh;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .md\:w-full {
-    width: 100%;
+  .md\:left-0 {
+    left: 0px;
   }
 
   .md\:flex-row {
