--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -568,8 +568,8 @@ video {
   left: 0px;
 }
 
-.right-4 {
-  right: 1rem;
+.left-4 {
+  left: 1rem;
 }
 
 .top-0 {
@@ -584,8 +584,16 @@ video {
   top: 1rem;
 }
 
-.bottom-4 {
-  bottom: 1rem;
+.top-8 {
+  top: 2rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
 }
 
 .z-10 {
@@ -632,12 +640,12 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .box-content {
@@ -668,10 +676,6 @@ video {
   aspect-ratio: 16/9;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -689,8 +693,8 @@ video {
   max-height: 70vh;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.min-h-\[calc\(75vh\+3rem\)\] {
+  min-height: calc(75vh + 3rem);
 }
 
 .w-\[15px\] {
@@ -701,12 +705,12 @@ video {
   width: 200px;
 }
 
-.w-\[30vw\] {
-  width: 30vw;
-}
-
 .w-\[40px\] {
   width: 40px;
+}
+
+.w-\[calc\(100vw-2rem\)\] {
+  width: calc(100vw - 2rem);
 }
 
 .w-fit {
@@ -722,20 +726,32 @@ video {
   width: 100vw;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
+.max-w-\[620px\] {
+  max-width: 620px;
+}
+
 .max-w-md {
   max-width: 28rem;
 }
 
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
-}
-
 .rotate-\[20deg\] {
   --tw-rotate: 20deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -849,6 +865,24 @@ video {
   --tw-bg-opacity: 0.7;
 }
 
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-special-white {
+  --tw-gradient-from: #fffafa var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 250 250 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-80\% {
+  --tw-gradient-from-position: 80%;
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -891,6 +925,11 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-\[1px\] {
   padding-top: 1px;
   padding-bottom: 1px;
@@ -901,21 +940,16 @@ video {
   padding-bottom: 2px;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .pb-10 {
   padding-bottom: 2.5rem;
 }
 
-.pb-0 {
-  padding-bottom: 0px;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
+.pt-0 {
+  padding-top: 0px;
 }
 
 .text-center {
@@ -1010,9 +1044,9 @@ video {
   opacity: 0.5;
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-video {
+  --tw-shadow: 0 0 30px hsla(0, 0%, 0%, 0.4);
+  --tw-shadow-colored: 0 0 30px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1075,13 +1109,32 @@ video {
         1px 1px 0 #000;
 }
 
+#videoPanel {
+  transition: all ease-in-out .5s !important;
+}
+
 .playing {
-  box-shadow: 0 0 30px hsla(0, 0%, 0%, 0.4) !important;
-  width: 50vw;
+  /* width: 55vw !important; */
+  height: auto;
+  transition: all ease-in-out .5s;
 }
 
 .infoReduced {
-  max-width: 40vw !important;
+  /* max-width: 40vw !important; */
+  transition: all ease-in-out .5s;
+}
+
+@media (max-width: 768px) {
+  .playing {
+    width: calc(100vw - 2rem);
+    height: auto;
+    transition: all ease-in-out .5s;
+  }
+
+  .infoReduced {
+    max-width: inherit !important;
+    transition: all ease-in-out .5s;
+  }
 }
 
 a {
@@ -1109,34 +1162,14 @@ a:hover {
   cursor: ne-resize;
 }
 
-.hover\:bg-\[blue\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[green\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 128 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[red\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[black\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[yellow\]:hover {
+.hover\:bg-\[green\]:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-yellow-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+  background-color: rgb(0 128 0 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-yellow-400:hover {
@@ -1149,14 +1182,14 @@ a:hover {
   color: rgb(0 0 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1193,12 +1226,40 @@ a:hover {
     bottom: 0px;
   }
 
-  .md\:right-0 {
-    right: 0px;
-  }
-
   .md\:left-0 {
     left: 0px;
+  }
+
+  .md\:left-auto {
+    left: auto;
+  }
+
+  .md\:right-4 {
+    right: 1rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-auto {
+    height: auto;
+  }
+
+  .md\:min-h-screen {
+    min-height: 100vh;
+  }
+
+  .md\:w-\[30vw\] {
+    width: 30vw;
   }
 
   .md\:flex-row {
