--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -576,6 +576,10 @@ video {
   top: 0px;
 }
 
+.top-1\/2 {
+  top: 50%;
+}
+
 .top-2 {
   top: 0.5rem;
 }
@@ -584,16 +588,8 @@ video {
   top: 1rem;
 }
 
-.top-8 {
-  top: 2rem;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-1\/2 {
-  top: 50%;
+.bottom-0 {
+  bottom: 0px;
 }
 
 .z-10 {
@@ -604,12 +600,12 @@ video {
   z-index: 20;
 }
 
-.z-30 {
-  z-index: 30;
-}
-
 .z-50 {
   z-index: 50;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .m-auto {
@@ -618,6 +614,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mb-6 {
@@ -638,10 +638,6 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .mt-8 {
@@ -689,12 +685,20 @@ video {
   height: 100vh;
 }
 
+.h-0 {
+  height: 0px;
+}
+
+.h-auto {
+  height: auto;
+}
+
 .max-h-\[70vh\] {
   max-height: 70vh;
 }
 
-.min-h-\[calc\(75vh\+3rem\)\] {
-  min-height: calc(75vh + 3rem);
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-\[15px\] {
@@ -726,10 +730,6 @@ video {
   width: 100vw;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .max-w-\[620px\] {
   max-width: 620px;
 }
@@ -740,12 +740,6 @@ video {
 
 .rotate-\[20deg\] {
   --tw-rotate: 20deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-125 {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -893,10 +887,6 @@ video {
      object-fit: cover;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -948,12 +938,12 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pt-0 {
-  padding-top: 0px;
+.pt-8 {
+  padding-top: 2rem;
 }
 
-.text-center {
-  text-align: center;
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .text-2xl {
@@ -1044,12 +1034,6 @@ video {
   opacity: 0.5;
 }
 
-.shadow-video {
-  --tw-shadow: 0 0 30px hsla(0, 0%, 0%, 0.4);
-  --tw-shadow-colored: 0 0 30px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1092,6 +1076,18 @@ video {
   transition-duration: .8s;
 }
 
+.duration-\[2s\] {
+  transition-duration: 2s;
+}
+
+.duration-\[3s\] {
+  transition-duration: 3s;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
@@ -1113,27 +1109,9 @@ video {
   transition: all ease-in-out .5s !important;
 }
 
-.playing {
-  /* width: 55vw !important; */
-  height: auto;
-  transition: all ease-in-out .5s;
-}
-
-.infoReduced {
-  /* max-width: 40vw !important; */
-  transition: all ease-in-out .5s;
-}
-
 @media (max-width: 768px) {
-  .playing {
-    width: calc(100vw - 2rem);
-    height: auto;
-    transition: all ease-in-out .5s;
-  }
-
-  .infoReduced {
-    max-width: inherit !important;
-    transition: all ease-in-out .5s;
+  .minHeightMobile {
+    min-height: calc(75vh - 3rem) !important;
   }
 }
 
@@ -1238,12 +1216,12 @@ a:hover {
     right: 1rem;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
   .md\:block {
     display: block;
+  }
+
+  .md\:flex {
+    display: flex;
   }
 
   .md\:hidden {
@@ -1252,10 +1230,6 @@ a:hover {
 
   .md\:h-auto {
     height: auto;
-  }
-
-  .md\:min-h-screen {
-    min-height: 100vh;
   }
 
   .md\:w-\[30vw\] {
