--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -564,6 +564,10 @@ video {
   right: -0.5rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -588,10 +592,6 @@ video {
   top: 1rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -604,8 +604,8 @@ video {
   z-index: 50;
 }
 
-.-z-10 {
-  z-index: -10;
+.z-30 {
+  z-index: 30;
 }
 
 .m-auto {
@@ -642,6 +642,10 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .box-content {
@@ -685,14 +689,6 @@ video {
   height: 100vh;
 }
 
-.h-0 {
-  height: 0px;
-}
-
-.h-auto {
-  height: auto;
-}
-
 .max-h-\[70vh\] {
   max-height: 70vh;
 }
@@ -730,6 +726,18 @@ video {
   width: 100vw;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
+.w-\[30vw\] {
+  width: 30vw;
+}
+
+.w-\[40vw\] {
+  width: 40vw;
+}
+
 .max-w-\[620px\] {
   max-width: 620px;
 }
@@ -761,8 +769,16 @@ video {
   flex-direction: column;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -938,10 +954,6 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1076,10 +1088,6 @@ video {
   transition-duration: .8s;
 }
 
-.duration-\[2s\] {
-  transition-duration: 2s;
-}
-
 .duration-\[3s\] {
   transition-duration: 3s;
 }
@@ -1186,6 +1194,12 @@ a:hover {
   opacity: 0.5;
 }
 
+.hover\:shadow-video:hover {
+  --tw-shadow: 0 0 30px hsla(0, 0%, 0%, 0.7);
+  --tw-shadow-colored: 0 0 30px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .group:hover .group-hover\:rotate-\[0\] {
   --tw-rotate: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1198,14 +1212,6 @@ a:hover {
 @media (min-width: 768px) {
   .md\:fixed {
     position: fixed;
-  }
-
-  .md\:bottom-0 {
-    bottom: 0px;
-  }
-
-  .md\:left-0 {
-    left: 0px;
   }
 
   .md\:left-auto {
