--- a/vente-dobjets/style.css
+++ b/vente-dobjets/style.css
@@ -10,21 +10,31 @@ body {
     opacity: .5;
 }
 
-
-.info {
+.object {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 3;
-    display: flex;
     width: 100vw;
-    justify-content: space-between;
-    padding: 0.5rem;
+    height: 100vh;
     box-sizing: border-box;
-    gap: 1rem;
+    flex-direction: column;
+
+    display: flex;
 }
 
-.info div {
+.object div {
+    padding: 0.5rem;
+    gap: 1rem;
+    justify-content: space-between;
+    display: flex;
+
+    position: absolute;
+    width: 100vw;
+    box-sizing: border-box;
+}
+
+.object>div>span {
     font-size: 4rem;
     width: fit-content;
     max-width: 1100px;
@@ -35,23 +45,31 @@ body {
     /* text-transform: capitalize; */
 }
 
-.objet {
-    width: 100vw;
-    height: 100vh;
-    z-index: 3;
-    position: fixed;
-    box-sizing: border-box;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.objet img {
+.object img {
     height: 90%;
     max-width: 100%;
     object-fit: contain;
+    z-index: 100;
+
+    transform: translateX(100%);
+    opacity: 1 !important;
+    transition: all ease-in-out .2s;
+}
+
+.imageMove {
+    transform: translateX(0) !important;
+    opacity: 1 !important;
+    transition: all ease-in-out .2s;
+}
+
+.imageGo {
+    transform: translateX(-100%) !important;
+    opacity: 0;
+    transition: all ease-in-out .2s;
+}
+
+.hidden {
+    display: none;
 }
 
 .objet button {
@@ -126,7 +144,7 @@ video {
     background-color: blue;
     object-fit: cover;
 
-    background-image: url(media/banco.png);
+    background-image: url(media/bg-sol.JPG);
     background-size: cover;
     background-position: center;
 }
