--- a/vente-dobjets/style.css
+++ b/vente-dobjets/style.css
@@ -5,11 +5,9 @@ body {
     font-family: sans-serif;
 }
 
-.pointer:hover {
+button:hover {
     cursor: pointer;
     transition: all ease-in-out .2s;
-    transform: scale(1.1) !important;
-
 }
 
 .object {
@@ -89,10 +87,15 @@ body {
 }
 
 .arrow {
-    display: flex;
-    justify-content: space-between;
+    /*! display: flex; */
+    /*! justify-content: space-between; */
+    /*! align-items: center; */
+    /*! height: 70px; */
+    /*! gap: 100px; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
     align-items: center;
-    height: 70px;
 }
 
 .arrow span {
@@ -103,25 +106,30 @@ body {
     -webkit-text-stroke: 1.8px black;
     text-transform: capitalize;
     margin: 0;
-    padding: 0;
+    width: 100%;
+    text-align: center;
 }
 
 .arrow button {
     font-size: 4rem;
-    width: fit-content;
     color: white;
     -webkit-text-stroke: 2px black;
     background-color: transparent;
     border: none;
-    height: 100%;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: snow;
-    padding: 30px;
     border-radius: 4px;
     text-decoration: none;
-    border: 2px solid grey;
+}
+
+.arrow button:active {
+    background-color: rgba(128, 128, 128, 0.681);
+}
+
+.active {
+    background-color: rgba(128, 128, 128, 0.681) !important;
 }
 
 .button {
@@ -130,14 +138,14 @@ body {
     gap: 10px;
 }
 
-.button a {
-    background-color: snow;
+a,
+button {
     padding: 12px 10px 10px 10px;
     border-radius: 4px;
     color: inherit;
     text-decoration: none;
-    border: 2px solid grey;
     font-size: 1rem;
+    border: 1px solid grey;
     transition: all ease-in-out .2s;
     text-align: center;
 
@@ -148,6 +156,10 @@ body {
 
 .button a:nth-child(2) {
     background-color: yellow;
+}
+
+.button a:nth-child(2):hover {
+    background-color: rgb(217, 217, 4);
 }
 
 
@@ -199,4 +211,17 @@ video {
 .bgSelected {
     background-color: black !important;
     border-color: white !important;
+}
+
+
+@media (max-width: 768px) {
+    .object>div>span {
+        font-size: 3rem;
+    }
+
+    a,
+    button {
+        padding: 6px;
+    }
+
 }
